<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/preference_aktienliste_title"
        android:key="@string/preference_aktienliste_key"
        android:summary="%s"
        android:defaultValue="@string/preference_aktienliste_default"
        android:inputType="textMultiLine" />

    <MultiSelectListPreference
        android:dialogTitle="@string/preference_aktienliste_dialog_title"
        android:title="@string/preference_aktienliste_title2"
        android:key="@string/preference_aktienliste_key2"
        android:summary="@string/preference_aktienliste_default"
        android:entries="@array/preference_aktienliste_default2"
        android:entryValues="@array/preference_aktienliste_default2"
        android:defaultValue="@array/preference_aktienliste_default2"/>

</PreferenceScreen>